# morphling-c

./: .clang-format  .gitignore  CMakeLists.txt
app/: benchmark_result.md  client-run.sh  client.cpp  client2.cpp  client3.cpp  multi-client-run.sh  run.sh  server.cpp  server2.cpp  utils.cpp  utils.h
core/: checksum.cpp  checksum.h  guidance.h  message.h  morphling.cpp  morphling.h  smr.cpp  smr.h  test.cpp  test2.cpp  test_copy.cpp  test_copy_msg  test_copy_msg.cpp  test_libevent_client.cpp  test_libevent_client2.cpp  test_libevent_server.cpp  test_libevent_server2.cpp  test_libevent_server3.cpp  test_msgpack.cpp  transport.h
extra/: arena.cpp  benchmark_result.md  chrono_measure.cpp  client  client.cpp  common.h  copy-server.sh  echo_server.cpp  heavy-map.cpp  key_gen.cpp  loop_client  loop_client.cpp  manual_event.cpp  message.cpp  modify_guidance.cpp  multi_send.cpp  server  server.cpp  thread_fence_add.cpp  try.cpp
loguru/: loguru.cpp
tests/: basic_morphling_test.cpp  entry_vote_test.cpp  replication_test.cpp  smr_log_test.cpp  test_chrono.cpp  test_mpreplica_init.cpp
